crates/core/src/snapshots/marzano_core__test__json_file_match_string.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $name
        scopedName: 1_0_$name
        ranges: []
      - name: $body
        scopedName: 1_1_$body
        ranges:
          - start:
              line: 2
              column: 9
            end:
              line: 6
              column: 9
            startByte: 9
            endByte: 82
      - name: $value
        scopedName: 1_2_$value
        ranges:
          - start:
              line: 4
              column: 19
            end:
              line: 4
              column: 24
            startByte: 58
            endByte: 63
    sourceFile: foo.package.json
    content: "\n        {\n          \"not-name\": \"foo\",\n          \"name\": \"foo\"\n        }\n        "
    byteRanges: ~
    ranges: []
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.package.json
    content: "\n        {\n          \"not-name\": \"foo\",\n          \"name\": \"bar\"\n        }\n        "
    byteRanges:
      - start: 58
        end: 63
    ranges: []
  reason: ~
  id: 9aeb278c-bc90-4725-a58d-76651d9ca998
- __typename: DoneFile
  relativeFilePath: foo.package.json
