crates/core/src/snapshots/marzano_core__test__md_link_metavariable.snap
---
source: apps/marzano/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $link
        scopedName: 1_0_$link
        ranges:
          - start:
              line: 1
              column: 8
            end:
              line: 1
              column: 27
            startByte: 7
            endByte: 26
      - name: $text
        scopedName: 1_1_$text
        ranges:
          - start:
              line: 1
              column: 2
            end:
              line: 1
              column: 6
            startByte: 1
            endByte: 5
      - name: $match
        scopedName: 1_2_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 28
            startByte: 0
            endByte: 27
    sourceFile: foo.md
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 28
        startByte: 0
        endByte: 27
    debug: "{\n  \"SORT\": \"inline\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 1,\n      \"column\": 28\n    }\n  },\n  \"element\": [\n    {\n      \"SORT\": \"inline_link\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 28\n        }\n      },\n      \"destination\": {\n        \"SORT\": \"link_destination\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 8\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 27\n          }\n        },\n        \"link\": [\n          {\n            \"SORT\": \"word\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 8\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 13\n              }\n            },\n            \"TEXT\": \"https\",\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"word_no_digit\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 8\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 13\n                  }\n                },\n                \"TEXT\": \"https\"\n              }\n            ]\n          },\n          {\n            \"SORT\": \":\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 13\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 14\n              }\n            },\n            \"TEXT\": \":\"\n          },\n          {\n            \"SORT\": \"/\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 14\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 15\n              }\n            },\n            \"TEXT\": \"/\"\n          },\n          {\n            \"SORT\": \"/\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 15\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 16\n              }\n            },\n            \"TEXT\": \"/\"\n          },\n          {\n            \"SORT\": \"word\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 16\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 19\n              }\n            },\n            \"TEXT\": \"app\",\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"word_no_digit\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 16\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 19\n                  }\n                },\n                \"TEXT\": \"app\"\n              }\n            ]\n          },\n          {\n            \"SORT\": \".\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 19\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 20\n              }\n            },\n            \"TEXT\": \".\"\n          },\n          {\n            \"SORT\": \"word\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 20\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 24\n              }\n            },\n            \"TEXT\": \"grit\",\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"word_no_digit\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 20\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 24\n                  }\n                },\n                \"TEXT\": \"grit\"\n              }\n            ]\n          },\n          {\n            \"SORT\": \".\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 24\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 25\n              }\n            },\n            \"TEXT\": \".\"\n          },\n          {\n            \"SORT\": \"word\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 25\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 27\n              }\n            },\n            \"TEXT\": \"io\",\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"word_no_digit\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 25\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 27\n                  }\n                },\n                \"TEXT\": \"io\"\n              }\n            ]\n          }\n        ]\n      },\n      \"identifier\": {\n        \"SORT\": \"link_text\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 7\n          }\n        },\n        \"text\": {\n          \"SORT\": \"link_text_non_empty\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 1\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 7\n            }\n          },\n          \"name\": {\n            \"SORT\": \"link_text\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 2\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 6\n              }\n            },\n            \"element\": [\n              {\n                \"SORT\": \"word\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 2\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 6\n                  }\n                },\n                \"TEXT\": \"grit\",\n                \"CHILDREN\": [\n                  {\n                    \"SORT\": \"word_no_digit\",\n                    \"RANGE\": {\n                      \"start\": {\n                        \"line\": 1,\n                        \"column\": 2\n                      },\n                      \"end\": {\n                        \"line\": 1,\n                        \"column\": 6\n                      }\n                    },\n                    \"TEXT\": \"grit\"\n                  }\n                ]\n              }\n            ]\n          },\n          \"CHILDREN\": [\n            {\n              \"SORT\": \"[\",\n              \"RANGE\": {\n                \"start\": {\n                  \"line\": 1,\n                  \"column\": 1\n                },\n                \"end\": {\n                  \"line\": 1,\n                  \"column\": 2\n                }\n              },\n              \"TEXT\": \"[\"\n            },\n            {\n              \"SORT\": \"]\",\n              \"RANGE\": {\n                \"start\": {\n                  \"line\": 1,\n                  \"column\": 6\n                },\n                \"end\": {\n                  \"line\": 1,\n                  \"column\": 7\n                }\n              },\n              \"TEXT\": \"]\"\n            }\n          ]\n        }\n      },\n      \"CHILDREN\": [\n        {\n          \"SORT\": \"(\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 7\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 8\n            }\n          },\n          \"TEXT\": \"(\"\n        },\n        {\n          \"SORT\": \")\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 27\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 28\n            }\n          },\n          \"TEXT\": \")\"\n        }\n      ]\n    }\n  ]\n}"
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.md
    content: "[changed](https://app.grit.io)"
    byteRanges:
      - start: 0
        end: 30
  ansiSummary: ""
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.md

