crates/core/src/snapshots/marzano_core__test__md_link_node.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $name
        scopedName: 1_0_$name
        ranges:
          - start:
              line: 1
              column: 2
            end:
              line: 1
              column: 6
            startByte: 1
            endByte: 5
      - name: $destination
        scopedName: 1_1_$destination
        ranges:
          - start:
              line: 1
              column: 8
            end:
              line: 1
              column: 27
            startByte: 7
            endByte: 26
      - name: $match
        scopedName: 1_2_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 28
            startByte: 0
            endByte: 27
    sourceFile: foo.md
    content: "[grit](https://app.grit.io)"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 28
        startByte: 0
        endByte: 27
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.md
    content: "[https://app.grit.io](grit)"
    byteRanges:
      - start: 0
        end: 27
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 28
        startByte: 0
        endByte: 27
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.md
