crates/core/src/snapshots/marzano_core__test__multifile_propagates_scope_between_steps.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Match
  messages: []
  variables:
    - name: $new_files
      scopedName: 0_0_$new_files
      ranges: []
    - name: $program
      scopedName: 0_1_$program
      ranges: []
    - name: $filename
      scopedName: 0_2_$filename
      ranges: []
    - name: $absolute_filename
      scopedName: 0_3_$absolute_filename
      ranges: []
    - name: $x
      scopedName: 1_0_$x
      ranges:
        - start:
            line: 1
            column: 5
          end:
            line: 1
            column: 6
          startByte: 4
          endByte: 5
    - name: $x
      scopedName: 2_0_$x
      ranges:
        - start:
            line: 1
            column: 5
          end:
            line: 1
            column: 6
          startByte: 4
          endByte: 5
    - name: $name
      scopedName: 2_1_$name
      ranges: []
    - name: $body
      scopedName: 2_2_$body
      ranges:
        - start:
            line: 1
            column: 1
          end:
            line: 1
            column: 7
          startByte: 0
          endByte: 6
    - name: $x
      scopedName: 3_0_$x
      ranges: []
    - name: $name
      scopedName: 3_1_$name
      ranges: []
    - name: $body
      scopedName: 3_2_$body
      ranges: []
  sourceFile: file1.tsx
  content: foo(1)
  ranges: []
  reason: ~
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $x
        scopedName: 1_0_$x
        ranges:
          - start:
              line: 1
              column: 5
            end:
              line: 1
              column: 6
            startByte: 4
            endByte: 5
      - name: $x
        scopedName: 2_0_$x
        ranges:
          - start:
              line: 1
              column: 5
            end:
              line: 1
              column: 6
            startByte: 4
            endByte: 5
      - name: $name
        scopedName: 2_1_$name
        ranges: []
      - name: $body
        scopedName: 2_2_$body
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 7
            startByte: 0
            endByte: 6
      - name: $x
        scopedName: 3_0_$x
        ranges: []
      - name: $name
        scopedName: 3_1_$name
        ranges: []
      - name: $body
        scopedName: 3_2_$body
        ranges: []
    sourceFile: file2.tsx
    content: "bar(1)\nbar(3)"
    byteRanges: ~
    ranges: []
  rewritten:
    messages: []
    variables: []
    sourceFile: file2.tsx
    content: "baz(1)\nbar(3)"
    byteRanges:
      - start: 0
        end: 6
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 7
        startByte: 0
        endByte: 6
  reason: ~
- __typename: DoneFile
  relativeFilePath: file1.tsx
- __typename: DoneFile
  relativeFilePath: file2.tsx
