crates/core/src/snapshots/marzano_core__test__program_autoset.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $match
        scopedName: 1_0_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 4
            startByte: 0
            endByte: 3
    sourceFile: test-file.tsx
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 4
        startByte: 0
        endByte: 3
    debug: "{\n  \"SORT\": \"program\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 2,\n      \"column\": 1\n    }\n  },\n  \"statements\": [\n    {\n      \"SORT\": \"expression_statement\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 10\n        }\n      },\n      \"expression\": {\n        \"SORT\": \"call_expression\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 9\n          }\n        },\n        \"arguments\": [\n          {\n            \"SORT\": \"identifier\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 5\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 8\n              }\n            },\n            \"TEXT\": \"bar\"\n          }\n        ],\n        \"function\": {\n          \"SORT\": \"identifier\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 1\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 4\n            }\n          },\n          \"TEXT\": \"foo\"\n        },\n        \"CHILDREN\": [\n          {\n            \"SORT\": \"(\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 4\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 5\n              }\n            },\n            \"TEXT\": \"(\"\n          },\n          {\n            \"SORT\": \")\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 8\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 9\n              }\n            },\n            \"TEXT\": \")\"\n          }\n        ]\n      },\n      \"CHILDREN\": [\n        {\n          \"SORT\": \";\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 9\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 10\n            }\n          },\n          \"TEXT\": \";\"\n        }\n      ]\n    }\n  ]\n}"
    reason: ~
  rewritten:
    messages: []
    variables: []
    sourceFile: test-file.tsx
    content: "foo(baz);\n"
    byteRanges:
      - start: 4
        end: 7
- __typename: DoneFile
  relativeFilePath: test-file.tsx
