crates/core/src/snapshots/marzano_core__test__warning_rewrite_in_not.snap
---
source: crates/core/src/test.rs
expression: cr.compilation_warnings
---
engine_id: None
file_name: None
level: Some(441)
message: "Warning: rewrites inside of a not will never be applied"
position: Some(Position { line: 2, column: 18 })
