crates/core/src/snapshots/marzano_core__test__warns_against_snippet_regex_without_metavars.snap
---
source: crates/core/src/test.rs
expression: res
---
engine_id: None
file_name: None
level: Some(441)
message: "Warning: unnecessary use of metavariable snippet syntax without metavariables. Replace r`[a-zA-Z]*` with r\"[a-zA-Z]*\""
position: Some(Position { line: 3, column: 17 })
